Added login functionality

--- a/Bloomify/Views/ShoppingCart/Checkout.cshtml
+++ b/Bloomify/Views/ShoppingCart/Checkout.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Bloomify.Models.ShippingDetail
 @{
-    var user = ViewBag.User as Bloomify.Models.User;
+    var user = ViewBag.User as Bloomify.Models.BloomifyUser;
     ViewData["Title"] = "Checkout";
 }
 
