--- a/Bloomify/Views/Shared/_Navbar.cshtml
+++ b/Bloomify/Views/Shared/_Navbar.cshtml
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Products" asp-action="Index">Products</a>
+                        <a class="nav-link" asp-controller="Store" asp-action="Index">Products</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Home" asp-action="Contact">Contact</a>
