Implemented checkout flow and order confirmation

--- a/Bloomify/Views/Shared/_Footer.cshtml
+++ b/Bloomify/Views/Shared/_Footer.cshtml
@@ -15,8 +15,8 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Products" asp-action="Index">All products</a>
                     </li>
-                    <li><a href="#">Flowers</a></li>
-                    <li><a href="#">Sweets</a></li>
+                    <li><a href="/Store?category=Flowers">Flowers</a></li>
+                    <li><a href="/Store?category=Sweets">Sweets</a></li>
                 </ul>
             </div>
 
