--- a/Bloomify/Views/Shared/_Navbar.cshtml
+++ b/Bloomify/Views/Shared/_Navbar.cshtml
@@ -43,6 +43,9 @@
 
                 <!-- icons on the right side -->
                 <div class="nav-icons">
+                    <a asp-controller="Wishlist" asp-action="Index" class="text-dark me-3 position-relative">
+                        <i class="fas fa-heart"></i>
+                    </a>
                     <a asp-controller="ShoppingCart" asp-action="Index" class="text-dark me-3 position-relative">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
