Solved some issues

--- a/Bloomify/Views/Home/Terms.cshtml
+++ b/Bloomify/Views/Home/Terms.cshtml
@@ -13,7 +13,7 @@
 
         <h2>ACCESS TO SITE</h2>
         <p>You agree that the supply of services or products will start immediately upon completion of all required registration formalities.</p>
-        <p>The information provided must be correct. By choosing to register, you agree to provide us with accurate name, address, and other useful information. To correct or update this information, <a href="login.html">log in here</a>.</p>
+        <p>The information provided must be correct. By choosing to register, you agree to provide us with accurate name, address, and other useful information. To correct or update this information, please log in.</p>
         <p>By accessing your account and using your personal password, you are responsible for all actions arising from its use. SC Bloomify SRL cannot be held responsible for errors arising from negligence in the security and confidentiality of your account and password.</p>
         <p>You must be over 18 years old to register on this site and order products, as some of them contain alcoholic beverages.</p>
 
